# sdk

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  run.py  run.sh
.github/issue-triage/: config.json
.github/issue-triage/skills/sdk-triage/: SKILL.md
.github/workflows/: cleanup-packages.yml  docker-build.yml  issue-triage.yml  offline-sdk-bundle.yml  release.yml  smoke-test.yml  vscode-extension.yml
config/: platform-package-patterns.txt  supervisor-neat-insight.conf  supervisor-openvscode.conf  sysroot-overlay.conf
config/profile.d/: neat-sdk-prompt.sh  pkg-config-sysroot.sh
docs/: README.md  building-sdk-image.md  building-software.md  devkit-workspace.md  installing-artifacts.md  neat-insight.md
scripts/: configure-apt-repos.sh  devkit-sync-rsync.sh  devkit.sh  docker-entrypoint.sh  insight-admin.sh  install-cross-toolchain.sh  install-neat-resources.sh  install-rustup.sh  install-sdk-sysroot-overlay.sh  install-sima-cli.sh  install-sysroot-overlay.sh  neat-deps.sh  neat-insight-supervised.sh  openvscode-supervised.sh  pin-cross-toolchain.sh  setup-sdk-sysroot.sh  sima-code.sh  simaai-init-build-env  simaai_setup_sdk.py  sysroot.sh  validate-sysroot-package-versions.sh
tests/sdk/: README.md  run-in-container.sh  run-smoke-tests.sh  test-build-script.sh  test-devkit-rsync-helper.sh  test-devkit-rsync-scope.sh  test-install-sdk-stub.sh  test-neat-deps.sh
tests/sdk/hello-neat/: CMakeLists.txt  hello_neat.py  main.cpp
tests/sdk/insight-video-routing/: run.sh
tests/sdk/neat-status/: validate_neat_status.py
tests/sdk/representative-builds/core-api/: CMakeLists.txt  main.cpp
tests/sdk/representative-builds/internals/: CMakeLists.txt  main.cpp
tests/sdk/representative-builds/llima-python-extension/: CMakeLists.txt  module.cpp
tools/: install_offline_sdk.sh  install_sdk_stub.sh  install_vscode_extension.sh  prepare_offline_sdk_bundle.sh  prepare_s3_artifacts.sh  prepare_vscode_extension_package.sh  retarget_release_line_metadata.py
tools/devkit-syncd/: .gitignore  README.md
tools/devkit-syncd/skills/devkit-sync-bootstrap/: SKILL.md
tools/devkit-syncd/skills/devkit-sync-bootstrap/agents/: openai.yaml
tools/devkit-syncd/skills/devkit-sync-bootstrap/references/: ops.md
vscode-extension/: .vscodeignore  LICENSE  README.md  package.json
vscode-extension/src/: extension.js
vscode-extension/themes/: sima-neat-dark.json  sima-neat-light.json
